# TLClipEdit

./: .anjuta_sym_db.db  AUTHORS  ChangeLog  ChangeLog~  Makefile  Makefile.am  Makefile.in  README  README.md  README~  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
Blender/: ClipEditIcon.blend  ClipEditIcon.blend1  紙の表面.xcfxz
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  tlclipedit
Debug/src/.deps/: main.Po  tlclipedit.Po
Logo/: Makefile.in
Windows/: README.TXT  main.c  tlclipedit.c  tlclipedit.h
Windows/prepare/: main.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  main.c  main.c~  tlclipedit  tlclipedit.c  tlclipedit.c~  tlclipedit.desktop  tlclipedit.h~  tlclipedit.ui
src/.deps/: main.Po  tlclipedit.Po
